--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>CRUD de Usuarios</h1>
+  <h1>CRUD de Usuarios - interfaz</h1>
 
   <input type="text" id="name" placeholder="Nombre" />
   <input type="email" id="email" placeholder="Correo" />
   <button onclick="addUser()">Agregar</button>
-  <input type="text" id="search" placeholder="Buscar por nombre" oninput="searchUsers()" />
+  <input type="text" id="search" placeholder="Buscar usuario por nombre" oninput="searchUsers()" />
 
   <table>
     <thead>
